Update Part B1: line charts with Precision@5, Recall@5

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2216,6 +2216,7 @@
     "            'Recall@5': results.get('recall_at_5', 0),\n",
     "            'Precision@5': results.get('precision_at_5', 0),\n",
     "            'Recall@10': results.get('recall_at_10', 0),\n",
+    "            'Precision@10': results.get('precision_at_10', 0),\n",
     "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
     "            'Micro_Precision': results.get('micro_precision', 0),\n",
     "            'Micro_Recall': results.get('micro_recall', 0)\n",
@@ -2224,7 +2225,7 @@
     "if len(loss_comparison_data) > 0:\n",
     "    df_loss_comparison = pd.DataFrame(loss_comparison_data)\n",
     "    \n",
-    "    # Export CSV\n",
+    "    # Export CSV (includes all metrics including @10)\n",
     "    import os\n",
     "    loss_csv_path = 'outputs/loss_function_comparison.csv'\n",
     "    os.makedirs('outputs', exist_ok=True)\n",
@@ -2240,150 +2241,136 @@
     "    print(f\"   Best mAP: {df_loss_comparison.loc[df_loss_comparison['mAP'].idxmax(), 'Strategy']} ({df_loss_comparison['mAP'].max():.4f})\")\n",
     "    print(f\"   Best Micro F1: {df_loss_comparison.loc[df_loss_comparison['Micro_F1'].idxmax(), 'Strategy']} ({df_loss_comparison['Micro_F1'].max():.4f})\")\n",
     "    print(f\"   Best Recall@5: {df_loss_comparison.loc[df_loss_comparison['Recall@5'].idxmax(), 'Strategy']} ({df_loss_comparison['Recall@5'].max():.4f})\")\n",
+    "    print(f\"   Best Precision@5: {df_loss_comparison.loc[df_loss_comparison['Precision@5'].idxmax(), 'Strategy']} ({df_loss_comparison['Precision@5'].max():.4f})\")\n",
     "    print(f\"   Lowest Hamming Loss: {df_loss_comparison.loc[df_loss_comparison['Hamming_Loss'].idxmin(), 'Strategy']} ({df_loss_comparison['Hamming_Loss'].min():.4f})\")\n",
     "    \n",
     "    # Create output directory for plots\n",
     "    loss_plots_dir = 'outputs/loss_function_plots'\n",
     "    os.makedirs(loss_plots_dir, exist_ok=True)\n",
     "    \n",
-    "    # Create visualization\n",
-    "    fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "    # Helper function to add best score marker\n",
+    "    def add_best_marker(ax, values, x_pos):\n",
+    "        \"\"\"Add a red star marker at the best score position.\"\"\"\n",
+    "        best_idx = np.argmax(values)\n",
+    "        best_val = values[best_idx]\n",
+    "        y_range = ax.get_ylim()[1] - ax.get_ylim()[0]\n",
+    "        y_offset = y_range * 0.08\n",
+    "        ax.plot(x_pos[best_idx], best_val, marker='*', markersize=20, \n",
+    "               color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
+    "        ax.annotate(f'Best: {best_val:.4f}', \n",
+    "                   xy=(x_pos[best_idx], best_val),\n",
+    "                   xytext=(0, y_offset), textcoords='offset points',\n",
+    "                   ha='center', fontsize=10, fontweight='bold',\n",
+    "                   bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
     "    \n",
-    "    # Plot 1: mAP comparison\n",
-    "    ax = axes[0, 0]\n",
-    "    ax.bar(range(len(df_loss_comparison)), df_loss_comparison['mAP'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
-    "    ax.set_xticks(range(len(df_loss_comparison)))\n",
-    "    ax.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
-    "    ax.set_ylabel('Mean Average Precision (mAP)', fontsize=12)\n",
-    "    ax.set_title('Loss Functions: mAP Comparison', fontsize=14, fontweight='bold')\n",
-    "    ax.grid(axis='y', alpha=0.3)\n",
-    "    for i, v in enumerate(df_loss_comparison['mAP']):\n",
-    "        ax.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "    strategies = df_loss_comparison['Strategy'].tolist()\n",
+    "    x_pos = np.arange(len(strategies))\n",
     "    \n",
-    "    # Plot 2: Micro F1 comparison\n",
-    "    ax = axes[0, 1]\n",
-    "    ax.bar(range(len(df_loss_comparison)), df_loss_comparison['Micro_F1'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
-    "    ax.set_xticks(range(len(df_loss_comparison)))\n",
-    "    ax.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
-    "    ax.set_ylabel('Micro F1 Score', fontsize=12)\n",
-    "    ax.set_title('Loss Functions: Micro F1 Comparison', fontsize=14, fontweight='bold')\n",
-    "    ax.grid(axis='y', alpha=0.3)\n",
-    "    for i, v in enumerate(df_loss_comparison['Micro_F1']):\n",
-    "        ax.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
-    "    \n",
-    "    # Plot 3: Recall@5 and Recall@10\n",
-    "    ax = axes[1, 0]\n",
-    "    x = range(len(df_loss_comparison))\n",
-    "    width = 0.35\n",
-    "    ax.bar([i - width/2 for i in x], df_loss_comparison['Recall@5'], width, label='Recall@5', alpha=0.8)\n",
-    "    ax.bar([i + width/2 for i in x], df_loss_comparison['Recall@10'], width, label='Recall@10', alpha=0.8)\n",
-    "    ax.set_xticks(x)\n",
-    "    ax.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
-    "    ax.set_ylabel('Recall Score', fontsize=12)\n",
-    "    ax.set_title('Loss Functions: Recall@5 and Recall@10', fontsize=14, fontweight='bold')\n",
-    "    ax.legend()\n",
-    "    ax.grid(axis='y', alpha=0.3)\n",
-    "    \n",
-    "    # Plot 4: Precision vs Recall\n",
-    "    ax = axes[1, 1]\n",
-    "    ax.scatter(df_loss_comparison['Micro_Recall'], df_loss_comparison['Micro_Precision'], \n",
-    "               s=200, c=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.6)\n",
-    "    for i, strategy in enumerate(df_loss_comparison['Strategy']):\n",
-    "        ax.annotate(strategy, \n",
-    "                   (df_loss_comparison.loc[i, 'Micro_Recall'], df_loss_comparison.loc[i, 'Micro_Precision']),\n",
-    "                   xytext=(5, 5), textcoords='offset points', fontsize=10)\n",
-    "    ax.set_xlabel('Micro Recall', fontsize=12)\n",
-    "    ax.set_ylabel('Micro Precision', fontsize=12)\n",
-    "    ax.set_title('Loss Functions: Precision vs Recall', fontsize=14, fontweight='bold')\n",
-    "    ax.grid(True, alpha=0.3)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    \n",
-    "    # Save combined plot\n",
-    "    combined_plot_path = f'{loss_plots_dir}/loss_function_comparison_all.png'\n",
-    "    plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
-    "    print(f\"\\n✅ Combined plot saved: {combined_plot_path}\")\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # Save individual plots\n",
-    "    print(\"\\n📊 Saving individual plots...\")\n",
-    "    \n",
-    "    # Individual Plot 1: mAP\n",
+    "    # ========== 1. mAP LINE CHART ==========\n",
     "    fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
-    "    ax1.bar(range(len(df_loss_comparison)), df_loss_comparison['mAP'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
-    "    ax1.set_xticks(range(len(df_loss_comparison)))\n",
-    "    ax1.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
+    "    values = df_loss_comparison['mAP'].tolist()\n",
+    "    ax1.plot(x_pos, values, marker='o', linewidth=2.5, markersize=10, color='#06A77D', label='mAP')\n",
+    "    ax1.fill_between(x_pos, values, alpha=0.2, color='#06A77D')\n",
+    "    add_best_marker(ax1, values, x_pos)\n",
+    "    ax1.set_xticks(x_pos)\n",
+    "    ax1.set_xticklabels(strategies, rotation=45, ha='right')\n",
     "    ax1.set_ylabel('Mean Average Precision (mAP)', fontsize=12)\n",
     "    ax1.set_title('Loss Functions: mAP Comparison', fontsize=14, fontweight='bold')\n",
-    "    ax1.grid(axis='y', alpha=0.3)\n",
-    "    for i, v in enumerate(df_loss_comparison['mAP']):\n",
-    "        ax1.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "    ax1.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "    ax1.set_ylim([min(values)*0.95, max(values)*1.08])\n",
+    "    for i, val in enumerate(values):\n",
+    "        ax1.text(i, val - (max(values) - min(values))*0.04, f'{val:.4f}', \n",
+    "                ha='center', fontsize=9, \n",
+    "                bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8, edgecolor='gray'))\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(f'{loss_plots_dir}/map_comparison.png', dpi=300, bbox_inches='tight')\n",
     "    plt.close()\n",
-    "    print(f\"  ✓ mAP plot saved\")\n",
+    "    print(f\"  ✓ mAP line chart saved\")\n",
     "    \n",
-    "    # Individual Plot 2: Micro F1\n",
+    "    # ========== 2. RECALL@5 LINE CHART ==========\n",
     "    fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
-    "    ax2.bar(range(len(df_loss_comparison)), df_loss_comparison['Micro_F1'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
-    "    ax2.set_xticks(range(len(df_loss_comparison)))\n",
-    "    ax2.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
-    "    ax2.set_ylabel('Micro F1 Score', fontsize=12)\n",
-    "    ax2.set_title('Loss Functions: Micro F1 Comparison', fontsize=14, fontweight='bold')\n",
-    "    ax2.grid(axis='y', alpha=0.3)\n",
-    "    for i, v in enumerate(df_loss_comparison['Micro_F1']):\n",
-    "        ax2.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "    values = df_loss_comparison['Recall@5'].tolist()\n",
+    "    ax2.plot(x_pos, values, marker='s', linewidth=2.5, markersize=10, color='#F39C12', label='Recall@5')\n",
+    "    ax2.fill_between(x_pos, values, alpha=0.2, color='#F39C12')\n",
+    "    add_best_marker(ax2, values, x_pos)\n",
+    "    ax2.set_xticks(x_pos)\n",
+    "    ax2.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "    ax2.set_ylabel('Recall@5', fontsize=12)\n",
+    "    ax2.set_title('Loss Functions: Recall@5 Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax2.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "    ax2.set_ylim([min(values)*0.95, max(values)*1.08])\n",
+    "    for i, val in enumerate(values):\n",
+    "        ax2.text(i, val - (max(values) - min(values))*0.04, f'{val:.4f}', \n",
+    "                ha='center', fontsize=9, \n",
+    "                bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8, edgecolor='gray'))\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'{loss_plots_dir}/micro_f1_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(f'{loss_plots_dir}/recall_5_comparison.png', dpi=300, bbox_inches='tight')\n",
     "    plt.close()\n",
-    "    print(f\"  ✓ Micro F1 plot saved\")\n",
+    "    print(f\"  ✓ Recall@5 line chart saved\")\n",
     "    \n",
-    "    # Individual Plot 3: Recall@K\n",
+    "    # ========== 3. PRECISION@5 LINE CHART ==========\n",
     "    fig3, ax3 = plt.subplots(figsize=(10, 6))\n",
-    "    x = range(len(df_loss_comparison))\n",
-    "    width = 0.35\n",
-    "    ax3.bar([i - width/2 for i in x], df_loss_comparison['Recall@5'], width, label='Recall@5', alpha=0.8, color='lightgreen')\n",
-    "    ax3.bar([i + width/2 for i in x], df_loss_comparison['Recall@10'], width, label='Recall@10', alpha=0.8, color='darkgreen')\n",
-    "    ax3.set_xticks(x)\n",
-    "    ax3.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
-    "    ax3.set_ylabel('Recall Score', fontsize=12)\n",
-    "    ax3.set_title('Loss Functions: Recall@5 and Recall@10', fontsize=14, fontweight='bold')\n",
-    "    ax3.legend(fontsize=11)\n",
-    "    ax3.grid(axis='y', alpha=0.3)\n",
+    "    values = df_loss_comparison['Precision@5'].tolist()\n",
+    "    ax3.plot(x_pos, values, marker='D', linewidth=2.5, markersize=10, color='#17A589', label='Precision@5')\n",
+    "    ax3.fill_between(x_pos, values, alpha=0.2, color='#17A589')\n",
+    "    add_best_marker(ax3, values, x_pos)\n",
+    "    ax3.set_xticks(x_pos)\n",
+    "    ax3.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "    ax3.set_ylabel('Precision@5', fontsize=12)\n",
+    "    ax3.set_title('Loss Functions: Precision@5 Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax3.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "    ax3.set_ylim([min(values)*0.95, max(values)*1.08])\n",
+    "    for i, val in enumerate(values):\n",
+    "        ax3.text(i, val - (max(values) - min(values))*0.04, f'{val:.4f}', \n",
+    "                ha='center', fontsize=9, \n",
+    "                bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8, edgecolor='gray'))\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'{loss_plots_dir}/recall_k_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(f'{loss_plots_dir}/precision_5_comparison.png', dpi=300, bbox_inches='tight')\n",
     "    plt.close()\n",
-    "    print(f\"  ✓ Recall@K plot saved\")\n",
+    "    print(f\"  ✓ Precision@5 line chart saved\")\n",
     "    \n",
-    "    # Individual Plot 4: Precision vs Recall\n",
+    "    # ========== 4. HAMMING LOSS LINE CHART ==========\n",
     "    fig4, ax4 = plt.subplots(figsize=(10, 6))\n",
-    "    ax4.scatter(df_loss_comparison['Micro_Recall'], df_loss_comparison['Micro_Precision'], \n",
-    "               s=200, c=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.6)\n",
-    "    for i, strategy in enumerate(df_loss_comparison['Strategy']):\n",
-    "        ax4.annotate(strategy, \n",
-    "                   (df_loss_comparison.loc[i, 'Micro_Recall'], df_loss_comparison.loc[i, 'Micro_Precision']),\n",
-    "                   xytext=(5, 5), textcoords='offset points', fontsize=10)\n",
-    "    ax4.set_xlabel('Micro Recall', fontsize=12)\n",
-    "    ax4.set_ylabel('Micro Precision', fontsize=12)\n",
-    "    ax4.set_title('Loss Functions: Precision vs Recall', fontsize=14, fontweight='bold')\n",
-    "    ax4.grid(True, alpha=0.3)\n",
+    "    values = df_loss_comparison['Hamming_Loss'].tolist()\n",
+    "    ax4.plot(x_pos, values, marker='^', linewidth=2.5, markersize=10, color='#E74C3C', label='Hamming Loss')\n",
+    "    ax4.fill_between(x_pos, values, alpha=0.2, color='#E74C3C')\n",
+    "    # For Hamming Loss, best is minimum\n",
+    "    best_idx = np.argmin(values)\n",
+    "    best_val = values[best_idx]\n",
+    "    y_range = max(values) - min(values)\n",
+    "    ax4.plot(x_pos[best_idx], best_val, marker='*', markersize=20, \n",
+    "           color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
+    "    ax4.annotate(f'Best: {best_val:.4f}', \n",
+    "               xy=(x_pos[best_idx], best_val),\n",
+    "               xytext=(0, y_range * 0.15), textcoords='offset points',\n",
+    "               ha='center', fontsize=10, fontweight='bold',\n",
+    "               bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
+    "    ax4.set_xticks(x_pos)\n",
+    "    ax4.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "    ax4.set_ylabel('Hamming Loss', fontsize=12)\n",
+    "    ax4.set_title('Loss Functions: Hamming Loss Comparison (Lower is Better)', fontsize=14, fontweight='bold')\n",
+    "    ax4.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "    ax4.set_ylim([min(values)*0.9, max(values)*1.1])\n",
+    "    for i, val in enumerate(values):\n",
+    "        ax4.text(i, val + y_range*0.02, f'{val:.4f}', \n",
+    "                ha='center', fontsize=9, \n",
+    "                bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8, edgecolor='gray'))\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'{loss_plots_dir}/precision_recall_scatter.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(f'{loss_plots_dir}/hamming_loss_comparison.png', dpi=300, bbox_inches='tight')\n",
     "    plt.close()\n",
-    "    print(f\"  ✓ Precision-Recall scatter plot saved\")\n",
+    "    print(f\"  ✓ Hamming Loss line chart saved\")\n",
     "    \n",
-    "    print(f\"\\n✅ All plots saved to: {loss_plots_dir}/\")\n",
+    "    print(f\"\\n✅ All line charts saved to: {loss_plots_dir}/\")\n",
     "    \n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"📁 EXPORTED FILES:\")\n",
     "    print(\"=\"*80)\n",
-    "    print(f\"  • CSV: {loss_csv_path}\")\n",
-    "    print(f\"  • Plots: {loss_plots_dir}/\")\n",
-    "    print(\"    - loss_function_comparison_all.png (combined)\")\n",
+    "    print(f\"  • CSV: {loss_csv_path} (includes @10 metrics)\")\n",
+    "    print(f\"  • Line Charts: {loss_plots_dir}/\")\n",
     "    print(\"    - map_comparison.png\")\n",
-    "    print(\"    - micro_f1_comparison.png\")\n",
-    "    print(\"    - recall_k_comparison.png\")\n",
-    "    print(\"    - precision_recall_scatter.png\")\n",
+    "    print(\"    - recall_5_comparison.png\")\n",
+    "    print(\"    - precision_5_comparison.png\")\n",
+    "    print(\"    - hamming_loss_comparison.png\")\n",
     "    print(\"=\"*80)\n",
     "    \n",
     "else:\n",
