Simplify best score markers: red star only, remove yellow annotations

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -165,6 +165,7 @@
     "import torch\n",
     "import numpy as np\n",
     "import json\n",
+    "import time\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -2253,15 +2254,10 @@
     "        \"\"\"Add a red star marker at the best score position.\"\"\"\n",
     "        best_idx = np.argmax(values)\n",
     "        best_val = values[best_idx]\n",
-    "        y_range = ax.get_ylim()[1] - ax.get_ylim()[0]\n",
-    "        y_offset = y_range * 0.08\n",
-    "        ax.plot(x_pos[best_idx], best_val, marker='*', markersize=20, \n",
-    "               color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
-    "        ax.annotate(f'Best: {best_val:.4f}', \n",
-    "                   xy=(x_pos[best_idx], best_val),\n",
-    "                   xytext=(0, y_offset), textcoords='offset points',\n",
-    "                   ha='center', fontsize=10, fontweight='bold',\n",
-    "                   bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
+    "        y_range = max(values) - min(values)\n",
+    "        y_offset = y_range * 0.03 if y_range > 0 else best_val * 0.02\n",
+    "        ax.plot(x_pos[best_idx], best_val + y_offset, marker='*', markersize=25, \n",
+    "               color='red', zorder=5, markeredgewidth=2, markeredgecolor='darkred')\n",
     "    \n",
     "    strategies = df_loss_comparison['Strategy'].tolist()\n",
     "    x_pos = np.arange(len(strategies))\n",
@@ -2338,13 +2334,9 @@
     "    best_idx = np.argmin(values)\n",
     "    best_val = values[best_idx]\n",
     "    y_range = max(values) - min(values)\n",
-    "    ax4.plot(x_pos[best_idx], best_val, marker='*', markersize=20, \n",
-    "           color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
-    "    ax4.annotate(f'Best: {best_val:.4f}', \n",
-    "               xy=(x_pos[best_idx], best_val),\n",
-    "               xytext=(0, y_range * 0.15), textcoords='offset points',\n",
-    "               ha='center', fontsize=10, fontweight='bold',\n",
-    "               bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
+    "    y_offset = y_range * 0.03 if y_range > 0 else best_val * 0.02\n",
+    "    ax4.plot(x_pos[best_idx], best_val - y_offset, marker='*', markersize=25, \n",
+    "           color='red', zorder=5, markeredgewidth=2, markeredgecolor='darkred')\n",
     "    ax4.set_xticks(x_pos)\n",
     "    ax4.set_xticklabels(strategies, rotation=45, ha='right')\n",
     "    ax4.set_ylabel('Hamming Loss', fontsize=12)\n",
@@ -3189,15 +3181,10 @@
     "            \"\"\"Add a red star marker at the best score position.\"\"\"\n",
     "            best_idx = np.argmax(values)\n",
     "            best_val = values[best_idx]\n",
-    "            y_range = ax.get_ylim()[1] - ax.get_ylim()[0]\n",
-    "            y_offset = y_range * 0.08\n",
-    "            ax.plot(x_pos[best_idx], best_val, marker='*', markersize=20, \n",
-    "                   color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
-    "            ax.annotate(f'Best: {best_val:.4f}', \n",
-    "                       xy=(x_pos[best_idx], best_val),\n",
-    "                       xytext=(0, y_offset), textcoords='offset points',\n",
-    "                       ha='center', fontsize=10, fontweight='bold',\n",
-    "                       bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
+    "            y_range = max(values) - min(values)\n",
+    "            y_offset = y_range * 0.03 if y_range > 0 else best_val * 0.02\n",
+    "            ax.plot(x_pos[best_idx], best_val + y_offset, marker='*', markersize=25, \n",
+    "                   color='red', zorder=5, markeredgewidth=2, markeredgecolor='darkred')\n",
     "        \n",
     "        # 1. Micro F1 Score\n",
     "        fig1, ax1 = plt.subplots(figsize=(12, 7))\n",
@@ -3337,15 +3324,10 @@
     "        # For Hamming Loss, mark the minimum (best) with star\n",
     "        best_idx = np.argmin(values)\n",
     "        best_val = values[best_idx]\n",
-    "        y_range = ax7.get_ylim()[1] - ax7.get_ylim()[0]\n",
-    "        y_offset = y_range * 0.08\n",
-    "        ax7.plot(x[best_idx], best_val, marker='*', markersize=20, \n",
-    "               color='red', zorder=5, markeredgewidth=1.5, markeredgecolor='darkred')\n",
-    "        ax7.annotate(f'Best: {best_val:.4f}', \n",
-    "                   xy=(x[best_idx], best_val),\n",
-    "                   xytext=(0, y_offset), textcoords='offset points',\n",
-    "                   ha='center', fontsize=10, fontweight='bold',\n",
-    "                   bbox=dict(boxstyle='round,pad=0.5', facecolor='yellow', alpha=0.7))\n",
+    "        y_range = max(values) - min(values)\n",
+    "        y_offset = y_range * 0.03 if y_range > 0 else best_val * 0.02\n",
+    "        ax7.plot(x[best_idx], best_val - y_offset, marker='*', markersize=25, \n",
+    "               color='red', zorder=5, markeredgewidth=2, markeredgecolor='darkred')\n",
     "        plt.tight_layout()\n",
     "        plt.savefig(f'{plots_dir}/hamming_loss.png', dpi=300, bbox_inches='tight')\n",
     "        plt.close()\n",
