refactor: Improve LightXML architecture, increase epochs to 5, cleanup notebook

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1405,7 +1405,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create output directory for plots\n",
+    "# Extract augmentation results for comparison\n",
+    "print(f\"\\n{'='*80}\")\n",
+    "print(f\"📊 AUGMENTATION STRATEGIES COMPARISON\")\n",
+    "print(f\"{'='*80}\\n\")\n",
+    "\n",
+    "# Define the desired order of strategies for the x-axis\n",
+    "ordered_strategies = ['baseline', 'ioc_augmentation', 'back_translation', 'oversampling', 'combined']\n",
+    "aug_comparison_data = []\n",
+    "\n",
+    "for strategy_name in ordered_strategies:\n",
+    "    if strategy_name in all_test_results:\n",
+    "        data = all_test_results[strategy_name]\n",
+    "        results = data['results']\n",
+    "        aug_comparison_data.append({\n",
+    "            'Strategy': data['config'],\n",
+    "            'Training_Time_min': data.get('training_time_min', 0),\n",
+    "            'mAP': results.get('mean_average_precision', 0),\n",
+    "            'Micro_F1': results.get('micro_f1', 0),\n",
+    "            'Recall@5': results.get('recall_at_5', 0),\n",
+    "            'Precision@5': results.get('precision_at_5', 0),\n",
+    "            'Recall@10': results.get('recall_at_10', 0),\n",
+    "            'Precision@10': results.get('precision_at_10', 0),\n",
+    "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
+    "            'Micro_Precision': results.get('micro_precision', 0),\n",
+    "            'Micro_Recall': results.get('micro_recall', 0)\n",
+    "        })\n",
+    "\n",
+    "if len(aug_comparison_data) > 0:\n",
+    "    df_aug_comparison = pd.DataFrame(aug_comparison_data)\n",
+    "    \n",
+    "    # Ensure the DataFrame is in the desired order\n",
+    "    df_aug_comparison['Strategy'] = pd.Categorical(df_aug_comparison['Strategy'], categories=[all_test_results[s]['config'] for s in ordered_strategies if s in all_test_results], ordered=True)\n",
+    "    df_aug_comparison = df_aug_comparison.sort_values('Strategy')\n",
+    "    \n",
+    "    # Export CSV (includes all metrics including @10)\n",
+    "    import os\n",
+    "    aug_csv_path = 'outputs/augmentation_comparison.csv'\n",
+    "    os.makedirs('outputs', exist_ok=True)\n",
+    "    df_aug_comparison.to_csv(aug_csv_path, index=False)\n",
+    "    print(f\"✅ CSV exported to: {aug_csv_path}\\n\")\n",
+    "    \n",
+    "    # Display comparison table\n",
+    "    print(\"\\n📋 Augmentation Performance Comparison (Ordered by Implementation):\")\n",
+    "    print(df_aug_comparison.to_string(index=False))\n",
+    "    \n",
+    "    # Find best strategies\n",
+    "    print(\"\\n🏆 Best Performers:\")\n",
+    "    print(f\"   Best mAP: {df_aug_comparison.loc[df_aug_comparison['mAP'].idxmax(), 'Strategy']} ({df_aug_comparison['mAP'].max():.4f})\")\n",
+    "    print(f\"   Best Micro F1: {df_aug_comparison.loc[df_aug_comparison['Micro_F1'].idxmax(), 'Strategy']} ({df_aug_comparison['Micro_F1'].max():.4f})\")\n",
+    "    print(f\"   Best Recall@5: {df_aug_comparison.loc[df_aug_comparison['Recall@5'].idxmax(), 'Strategy']} ({df_aug_comparison['Recall@5'].max():.4f})\")\n",
+    "    print(f\"   Best Precision@5: {df_aug_comparison.loc[df_aug_comparison['Precision@5'].idxmax(), 'Strategy']} ({df_aug_comparison['Precision@5'].max():.4f})\")\n",
+    "    print(f\"   Lowest Hamming Loss: {df_aug_comparison.loc[df_aug_comparison['Hamming_Loss'].idxmin(), 'Strategy']} ({df_aug_comparison['Hamming_Loss'].min():.4f})\")\n",
+    "    \n",
+    "    # Create output directory for plots\n",
     "    aug_plots_dir = 'outputs/augmentation_plots'\n",
     "    os.makedirs(aug_plots_dir, exist_ok=True)\n",
     "    \n",
