--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -170,19 +170,6 @@
     }
    ],
    "source": [
-    "# Clear import cache\n",
-    "import sys\n",
-    "if 'src.data_loader' in sys.modules:\n",
-    "    del sys.modules['src.data_loader']\n",
-    "if 'src.model' in sys.modules:\n",
-    "    del sys.modules['src.model']\n",
-    "if 'src.train' in sys.modules:\n",
-    "    del sys.modules['src.train']\n",
-    "if 'src.evaluate' in sys.modules:\n",
-    "    del sys.modules['src.evaluate']\n",
-    "if 'src.strategies' in sys.modules:\n",
-    "    del sys.modules['src.strategies']\n",
-    "\n",
     "import torch\n",
     "import numpy as np\n",
     "import json\n",
@@ -193,46 +180,8 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "# Import prepare_data first\n",
-    "from src.data_loader import prepare_data\n",
-    "\n",
-    "# CRITICAL FIX: Define the function HERE if import fails\n",
-    "try:\n",
-    "    from src.data_loader import load_datasets_and_prepare_dataloaders\n",
-    "    print(\"✅ Fonksiyon GitHub'dan import edildi\")\n",
-    "except ImportError:\n",
-    "    print(\"⚠️  GitHub import başarısız, fonksiyon notebook'ta tanımlanıyor...\")\n",
-    "    \n",
-    "    def load_datasets_and_prepare_dataloaders(\n",
-    "        model_name: str = \"ibm-research/CTI-BERT\",\n",
-    "        batch_size: int = 16,\n",
-    "        max_length: int = 512,\n",
-    "        use_hybrid: bool = True,\n",
-    "        dataset_name: str = \"tumeteor/Security-TTP-Mapping\"\n",
-    "    ):\n",
-    "        \"\"\"Wrapper for prepare_data - notebook fallback version.\"\"\"\n",
-    "        data = prepare_data(\n",
-    "            model_name=model_name,\n",
-    "            max_length=max_length,\n",
-    "            use_hybrid=use_hybrid,\n",
-    "            dataset_name=dataset_name\n",
-    "        )\n",
-    "        \n",
-    "        train_loader = DataLoader(\n",
-    "            data['train_dataset'],\n",
-    "            batch_size=batch_size,\n",
-    "            shuffle=True\n",
-    "        )\n",
-    "        \n",
-    "        return (\n",
-    "            train_loader,\n",
-    "            None,\n",
-    "            data['test_dataset'],\n",
-    "            data['label_list']\n",
-    "        )\n",
-    "    \n",
-    "    print(\"✅ Fallback fonksiyon tanımlandı (CTI-BERT)\")\n",
-    "\n",
+    "# Import project modules\n",
+    "from src.data_loader import prepare_data, load_datasets_and_prepare_dataloaders\n",
     "from src.model import load_model\n",
     "from src.train import train_model\n",
     "from src.evaluate import evaluate_model\n",
@@ -240,7 +189,7 @@
     "\n",
     "print(\"✅ Modüller yüklendi\")\n",
     "print(f\"PyTorch: {torch.__version__}\")\n",
-    "print(f\"CUDA: {torch.cuda.is_available()}\")\n"
+    "print(f\"CUDA: {torch.cuda.is_available()}\")"
    ]
   },
   {
@@ -265,7 +214,7 @@
     "    'model_name': 'ibm-research/CTI-BERT',  # CTI domain-specific BERT\n",
     "    'batch_size': 16,\n",
     "    'learning_rate': 2e-5,\n",
-    "    'num_epochs': 3,\n",
+    "    'num_epochs': 5,\n",
     "    'max_length': 128,\n",
     "    'device': 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "}\n",
@@ -280,7 +229,7 @@
     "print(\"✅ Konfigürasyon ayarlandı\")\n",
     "print(f\"Model: {BASE_CONFIG['model_name']}\")\n",
     "print(f\"Device: {BASE_CONFIG['device']}\")\n",
-    "print(f\"Output: {OUTPUT_DIR.absolute()}\")\n"
+    "print(f\"Output: {OUTPUT_DIR.absolute()}\")"
    ]
   },
   {
@@ -398,54 +347,6 @@
     "| **AUG-3** | Back-translation Only | ~40-50 dk |\n",
     "| **AUG-4** | Oversampling Only | ~30-40 dk |\n",
     "| **AUG-5** | Combined (All 3 methods) | ~50-60 dk |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7821b172",
-   "metadata": {},
-   "source": [
-    "### 🔧 Augmentation Setup\n",
-    "> Augmentation modülünü import et ve fonksiyonları test et."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d977d03e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import augmentation module\n",
-    "from src.augmentation import replace_iocs, back_translate, augment_tail_samples\n",
-    "\n",
-    "# Test IoC replacement\n",
-    "test_text = \"\"\"\n",
-    "The attacker used PowerShell to connect to 192.168.1.10 and downloaded malware from\n",
-    "http://malicious.com/payload.exe. The file was saved to C:\\\\Users\\\\Alice\\\\AppData\\\\mal.dll\n",
-    "with MD5 hash 5d41402abc4b2a76b9719d911017c592. Registry key HKLM\\\\SOFTWARE\\\\Test was modified.\n",
-    "\"\"\"\n",
-    "\n",
-    "print(\"=\"*70)\n",
-    "print(\"🧪 TEST 1: IoC REPLACEMENT\")\n",
-    "print(\"=\"*70)\n",
-    "print(\"\\n📄 Original Text:\")\n",
-    "print(test_text)\n",
-    "print(\"\\n🔄 IoC Replaced:\")\n",
-    "print(replace_iocs(test_text))\n",
-    "\n",
-    "# Test back-translation (small example for speed)\n",
-    "simple_text = \"The attacker used PowerShell to execute malicious commands and escalate privileges.\"\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"🧪 TEST 2: BACK-TRANSLATION\")\n",
-    "print(\"=\"*70)\n",
-    "print(\"\\n📄 Original Text:\")\n",
-    "print(simple_text)\n",
-    "print(\"\\n🔄 Back-translated (EN→DE→EN):\")\n",
-    "print(back_translate(simple_text, device=BASE_CONFIG['device']))\n",
-    "\n",
-    "print(\"\\n✅ Augmentation module loaded successfully!\\n\")"
    ]
   },
   {
@@ -2855,43 +2756,80 @@
     "# Compare all strategies\n",
     "if len(all_test_results) > 0:\n",
     "    print(\"\\n\" + \"=\"*80)\n",
-    "    print(\" 📊 HİBRİT STRATEJİ KARŞILAŞTIRMASI (Sıralı - mAP'a göre)\")\n",
+    "    print(\" 📊 HİBRİT STRATEJİ KARŞILAŞTIRMASI (Sıralı - Uygulama Sırasına Göre)\")\n",
     "    print(\"=\"*80 + \"\\n\")\n",
     "    \n",
+    "    # Define the desired order of hybrid strategies (implementation order)\n",
+    "    ordered_hybrid_strategies = [\n",
+    "        'hybrid_weighted_classifier_chain',\n",
+    "        'hybrid_weighted_extra_trees',\n",
+    "        'hybrid_weighted_random_forest',\n",
+    "        'hybrid_weighted_attentionxml',\n",
+    "        'hybrid_weighted_lightxml',\n",
+    "        'hybrid_focal_gamma5_classifier_chain',\n",
+    "        'hybrid_focal_gamma5_extra_trees',\n",
+    "        'hybrid_focal_gamma5_random_forest',\n",
+    "        'hybrid_focal_gamma5_attentionxml',\n",
+    "        'hybrid_focal_gamma5_lightxml'\n",
+    "    ]\n",
+    "    \n",
     "    comparison_data = []\n",
+    "    \n",
+    "    # First add hybrid strategies in order\n",
+    "    for strategy_name in ordered_hybrid_strategies:\n",
+    "        if strategy_name in all_test_results:\n",
+    "            result_dict = all_test_results[strategy_name]\n",
+    "            results = result_dict['results']\n",
+    "            comparison_data.append({\n",
+    "                'Strategy': strategy_name,\n",
+    "                'Training_Time_min': result_dict.get('training_time_min', 0),\n",
+    "                'Micro F1': results.get('micro_f1', 0),\n",
+    "                'mAP': results.get('mean_average_precision', 0),\n",
+    "                'Hamming Loss': results.get('hamming_loss', 0),\n",
+    "                'Example-based Accuracy': results.get('example_based_accuracy', 0),\n",
+    "                'Micro Precision': results.get('micro_precision', 0),\n",
+    "                'Micro Recall': results.get('micro_recall', 0),\n",
+    "                'Precision@5': results.get('precision_at_5', 0),\n",
+    "                'Recall@5': results.get('recall_at_5', 0),\n",
+    "                'Precision@10': results.get('precision_at_10', 0),\n",
+    "                'Recall@10': results.get('recall_at_10', 0)\n",
+    "            })\n",
+    "    \n",
+    "    # Then add any remaining strategies not in the ordered list\n",
     "    for strategy_name, result_dict in all_test_results.items():\n",
-    "        results = result_dict['results']\n",
-    "        comparison_data.append({\n",
-    "            'Strategy': strategy_name,\n",
-    "            'Training_Time_min': result_dict.get('training_time_min', 0),\n",
-    "            'Micro F1': results.get('micro_f1', 0),\n",
-    "            'mAP': results.get('mean_average_precision', 0),\n",
-    "            'Hamming Loss': results.get('hamming_loss', 0),\n",
-    "            'Example-based Accuracy': results.get('example_based_accuracy', 0),\n",
-    "            'Micro Precision': results.get('micro_precision', 0),\n",
-    "            'Micro Recall': results.get('micro_recall', 0),\n",
-    "            'Precision@5': results.get('precision_at_5', 0),\n",
-    "            'Recall@5': results.get('recall_at_5', 0),\n",
-    "            'Precision@10': results.get('precision_at_10', 0),\n",
-    "            'Recall@10': results.get('recall_at_10', 0)\n",
-    "        })\n",
+    "        if strategy_name not in ordered_hybrid_strategies:\n",
+    "            results = result_dict['results']\n",
+    "            comparison_data.append({\n",
+    "                'Strategy': strategy_name,\n",
+    "                'Training_Time_min': result_dict.get('training_time_min', 0),\n",
+    "                'Micro F1': results.get('micro_f1', 0),\n",
+    "                'mAP': results.get('mean_average_precision', 0),\n",
+    "                'Hamming Loss': results.get('hamming_loss', 0),\n",
+    "                'Example-based Accuracy': results.get('example_based_accuracy', 0),\n",
+    "                'Micro Precision': results.get('micro_precision', 0),\n",
+    "                'Micro Recall': results.get('micro_recall', 0),\n",
+    "                'Precision@5': results.get('precision_at_5', 0),\n",
+    "                'Recall@5': results.get('recall_at_5', 0),\n",
+    "                'Precision@10': results.get('precision_at_10', 0),\n",
+    "                'Recall@10': results.get('recall_at_10', 0)\n",
+    "            })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
-    "    df_comparison = df_comparison.sort_values('mAP', ascending=False)  # Sort by mAP\n",
     "    \n",
     "    print(df_comparison.to_string(index=False))\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    \n",
     "    # Find best strategy\n",
-    "    best_strategy = df_comparison.iloc[0]['Strategy']\n",
-    "    best_map = df_comparison.iloc[0]['mAP']\n",
-    "    best_f1 = df_comparison.iloc[0]['Micro F1']\n",
+    "    best_idx = df_comparison['mAP'].idxmax()\n",
+    "    best_strategy = df_comparison.iloc[best_idx]['Strategy']\n",
+    "    best_map = df_comparison.iloc[best_idx]['mAP']\n",
+    "    best_f1 = df_comparison.iloc[best_idx]['Micro F1']\n",
     "    \n",
     "    print(f\"\\n🏆 EN İYİ STRATEJİ: {best_strategy}\")\n",
     "    print(f\"   mAP (Ranking Quality): {best_map:.4f}\")\n",
     "    print(f\"   Micro F1 Score: {best_f1:.4f}\")\n",
-    "    print(f\"   Micro Precision: {df_comparison.iloc[0]['Micro Precision']:.4f}\")\n",
-    "    print(f\"   Micro Recall: {df_comparison.iloc[0]['Micro Recall']:.4f}\")\n",
+    "    print(f\"   Micro Precision: {df_comparison.iloc[best_idx]['Micro Precision']:.4f}\")\n",
+    "    print(f\"   Micro Recall: {df_comparison.iloc[best_idx]['Micro Recall']:.4f}\")\n",
     "    \n",
     "    # Compare to baseline if exists\n",
     "    if 'baseline' in all_test_results:\n",
