fix: Add augmentation imports to notebook

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -186,6 +186,7 @@
     "from src.train import train_model\n",
     "from src.evaluate import evaluate_model\n",
     "from src.strategies import get_strategy_config\n",
+    "from src.augmentation import replace_iocs, back_translate, augment_tail_samples\n",
     "\n",
     "print(\"✅ Modüller yüklendi\")\n",
     "print(f\"PyTorch: {torch.__version__}\")\n",
