fix: Add safety check for all_test_results in comparison cells

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1941,6 +1941,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check if all_test_results exists\n",
+    "if 'all_test_results' not in dir():\n",
+    "    all_test_results = {}\n",
+    "    print(\"⚠️  all_test_results was not defined. Please run Configuration cell first.\")\n",
+    "\n",
     "# Extract loss function results for comparison\n",
     "print(f\"\\n{'='*80}\")\n",
     "print(f\"📊 LOSS FUNCTION STRATEGIES COMPARISON\")\n",
