refactor: Add fixed-N sampling to ensure objective augmentation comparison
- All augmentation strategies (AUG-1 to AUG-5) now train on equal dataset sizes
- Added apply_fixed_n() helper function to downsample/upsample train sets to baseline size
- Each strategy resampled to TARGET_TRAIN_SIZE for fair comparison (same optimizer updates)
- Config descriptions updated with [Fixed N] marker

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -367,6 +367,31 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import random\n",
+    "\n",
+    "# Fixed-N setup for objective augmentation comparison\n",
+    "FIXED_N_SEED = 42\n",
+    "TARGET_TRAIN_SIZE = len(data['train_dataset'])\n",
+    "\n",
+    "def apply_fixed_n(texts, labels, target_size=TARGET_TRAIN_SIZE, seed=FIXED_N_SEED):\n",
+    "    if len(texts) != len(labels):\n",
+    "        raise ValueError(f\"texts/labels length mismatch: {len(texts)} vs {len(labels)}\")\n",
+    "\n",
+    "    n = len(texts)\n",
+    "    if n == target_size:\n",
+    "        return texts, labels\n",
+    "\n",
+    "    rng = random.Random(seed)\n",
+    "\n",
+    "    if n > target_size:\n",
+    "        indices = rng.sample(range(n), target_size)\n",
+    "    else:\n",
+    "        indices = list(range(n)) + rng.choices(range(n), k=target_size - n)\n",
+    "        rng.shuffle(indices)\n",
+    "\n",
+    "    return [texts[i] for i in indices], [labels[i] for i in indices]\n",
+    "\n",
+    "print(f\"🎯 Fixed-N target train size: {TARGET_TRAIN_SIZE}\")\n",
     "\n",
     "strategy_name = \"aug_baseline\"\n",
     "print(f\"\\n{'='*60}\")\n",
@@ -441,8 +466,7 @@
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-1 TAMAMLANDI: {strategy_name}\")\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"=\"*60)\n",
-    "\n"
+    "print(\"=\"*60)\n"
    ]
   },
   {
@@ -517,6 +541,16 @@
     "\n",
     "print(f\"✅ Original samples: {len(train_df)}\")\n",
     "print(f\"✅ Augmented samples: {len(augmented_train_texts)} (3x augmentation)\")\n",
+    "\n",
+    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "_before_n = len(augmented_train_texts)\n",
+    "augmented_train_texts, augmented_train_labels = apply_fixed_n(\n",
+    "    augmented_train_texts,\n",
+    "    augmented_train_labels,\n",
+    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    seed=FIXED_N_SEED,\n",
+    ")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
     "\n",
     "# Prepare augmented data\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -625,8 +659,8 @@
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + IoC Replacement (3x)',\n",
-    "    'description': 'Training data augmented with IoC replacement only',\n",
+    "    'config': 'Weighted BCE + IoC Replacement (3x) [Fixed N]',\n",
+    "    'description': 'Training data augmented with IoC replacement only (fixed train size)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -635,8 +669,7 @@
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-2 TAMAMLANDI: {strategy_name}\")\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"=\"*60)\n",
-    "\n"
+    "print(\"=\"*60)\n"
    ]
   },
   {
@@ -726,6 +759,16 @@
     "\n",
     "print(f\"Original samples: {len(train_df)}\")\n",
     "print(f\"Augmented samples: {len(augmented_train_texts)} (+{len(augmented_train_texts) - len(train_df)} from back-translation)\")\n",
+    "\n",
+    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "_before_n = len(augmented_train_texts)\n",
+    "augmented_train_texts, augmented_train_labels = apply_fixed_n(\n",
+    "    augmented_train_texts,\n",
+    "    augmented_train_labels,\n",
+    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    seed=FIXED_N_SEED,\n",
+    ")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
     "\n",
     "# Create custom dataset\n",
     "from src.data_loader import prepare_data\n",
@@ -834,8 +877,8 @@
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Back-translation (30% tail)',\n",
-    "    'description': 'Training data augmented with back-translation for tail TTPs',\n",
+    "    'config': 'Weighted BCE + Back-translation (30% tail) [Fixed N]',\n",
+    "    'description': 'Training data augmented with back-translation for tail TTPs (fixed train size)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -844,8 +887,7 @@
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-3 TAMAMLANDI: {strategy_name}\")\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"=\"*60)\n",
-    "\n"
+    "print(\"=\"*60)\n"
    ]
   },
   {
@@ -933,6 +975,16 @@
     "print(f\"Augmented samples: {len(augmented_texts)}\")\n",
     "print(f\"Augmentation ratio: {len(augmented_texts) / len(train_texts):.2f}x\")\n",
     "\n",
+    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "_before_n = len(augmented_texts)\n",
+    "augmented_texts, augmented_labels = apply_fixed_n(\n",
+    "    augmented_texts,\n",
+    "    augmented_labels,\n",
+    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    seed=FIXED_N_SEED,\n",
+    ")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
+    "\n",
     "# Create custom dataset\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
@@ -1038,8 +1090,8 @@
     "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Oversampling Only',\n",
-    "    'description': 'Training data augmented with tail TTP oversampling',\n",
+    "    'config': 'Weighted BCE + Oversampling Only [Fixed N]',\n",
+    "    'description': 'Training data augmented with tail TTP oversampling (fixed train size)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -1049,7 +1101,7 @@
     "print(f\"✅ AUG-4 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"\\n\")"
+    "print(\"\\n\")\n"
    ]
   },
   {
@@ -1124,6 +1176,8 @@
     "augmented_texts = train_texts.copy()\n",
     "augmented_labels = train_labels_raw.copy()\n",
     "\n",
+    "rng = random.Random(FIXED_N_SEED)\n",
+    "\n",
     "for idx, labels in enumerate(train_labels_raw):\n",
     "    # Check if sample has tail TTPs\n",
     "    if any(label in tail_ttps for label in labels):\n",
@@ -1139,8 +1193,7 @@
     "            augmented_text = replace_iocs(augmented_text)\n",
     "            \n",
     "            # Apply back-translation with 15% probability\n",
-    "            import random\n",
-    "            if random.random() < 0.15:\n",
+    "            if rng.random() < 0.15:\n",
     "                augmented_text = back_translate(augmented_text, device=BASE_CONFIG['device'])\n",
     "            \n",
     "            augmented_texts.append(augmented_text)\n",
@@ -1149,6 +1202,16 @@
     "print(f\"\\nOriginal samples: {len(train_texts)}\")\n",
     "print(f\"Augmented samples: {len(augmented_texts)}\")\n",
     "print(f\"Augmentation ratio: {len(augmented_texts) / len(train_texts):.2f}x\")\n",
+    "\n",
+    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "_before_n = len(augmented_texts)\n",
+    "augmented_texts, augmented_labels = apply_fixed_n(\n",
+    "    augmented_texts,\n",
+    "    augmented_labels,\n",
+    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    seed=FIXED_N_SEED,\n",
+    ")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
     "\n",
     "# Create custom dataset\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -1255,8 +1318,8 @@
     "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Combined Augmentation',\n",
-    "    'description': 'Training data augmented with IoC replacement, back-translation, and tail oversampling',\n",
+    "    'config': 'Weighted BCE + Combined Augmentation [Fixed N]',\n",
+    "    'description': 'Training data augmented with IoC replacement, back-translation, and tail oversampling (fixed train size)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -1266,7 +1329,7 @@
     "print(f\"✅ AUG-5 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"\\n\")"
+    "print(\"\\n\")\n"
    ]
   },
   {
